# miniser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: format.yml  test.yml
examples/: CMakeLists.txt  basic.cpp  rename.cpp
include/miniser/: deser.hpp  miniser.hpp  ser.hpp
include/miniser/detail/: names.hpp
tests/: deser.cpp  equality.hpp  rename.cpp  ser.cpp
